--- a/public/style.css
+++ b/public/style.css
@@ -311,7 +311,7 @@ h3 {
 	background: #4caf50;
 }
 
-ul {
+.navbar-list {
 	list-style-type: none;
 	position: fixed;
 	top: 0;
@@ -321,14 +321,14 @@ ul {
 	background-color: #4caf50;
 }
 
-li {
+.navbar-list > li {
 	float: left;
 	display: block;
 	padding: 12px 15px;
 	text-align: center;
 	color: white;
 }
-li:hover {
+.navbar-list > li:hover {
 	float: left;
 	display: block;
 	text-align: center;
@@ -336,14 +336,14 @@ li:hover {
 	color: black;
 }
 
-.searchform {
+.navbar-list > .searchform {
 	display: block;
 	padding: 10px 15px;
 	float: right;
 	color: white;
 }
 
-.searchform:hover {
+.navbar-list > .searchform:hover {
 	display: block;
 	padding: 10px 15px;
 	float: right;
